python/testData/pyi/inspections/pyiRelativeImports/package_with_stub_in_path/a.pyi
from .m1 import foo
from .m1 import <error descr="Unresolved reference 'bar'">bar</error>

foo2 = foo
bar2 = bar